--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo-12.svg" alt="" class="class="logo-2"></a>-->
         <ul>
-          <li><a href="#"><i class="ri-phone-line"></i>AK07#0707</a></li>
+          <li><a href="#"><i class="ri-phone-line"></i>Armada#0001</a></li>
           <li><a href="#"><i class="ri-mail-open-line"></i>OfficialArmada1215@gmail.com</a></li>
         </ul>
       </div>
