--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@
           <div class="row experience-item align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
-              <h6>2021년 1월 24일</h6>
-              <h4>한강온도 사이트 개발 시작</h4>
+              <h6>2021년 4월 10일</h6>
+              <h4>🚨긴급패치🚨</h4>
             </div>
             <div class="col-lg-6">
               <p>
-                한강의 온도를 확인 하실 수 있는 사이트를 개발중에 있습니다.
+                실시간 문의 시스템 삭제
               </p>
             </div>
           </div><!-- End Experience Item-->
@@ -522,7 +522,7 @@
             data-aos="fade-up" data-aos-delay="100">
             <div class="card-body-second">
               <h6 class="card-text">디스코드 / Discord</h6>
-              <h5 class="card-title"><a href="#">정리할 게 있어서 Discord 닉네임 태그 공개를 중단했어요. 걱정하지 마세요, 곧 공개를 재개할 테니까요. 문의 사항이 있다면 언제든지 OfficialArmada1215@gmail.com으로 메일 주세요</a></h5>
+              <h5 class="card-title"><a href="#">Armada#0001</a></h5>
 
             </div>
           </div>
