--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </div>
             <div class="col-lg-6">
               <p>
-                실시간 문의 시스템 삭제
+                실시간 문의 시스템 일시적 사용안함
               </p>
             </div>
           </div><!-- End Experience Item-->
